# gdoc-rust

./: .env.default  .gitignore  Cargo.toml  README.md  docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.yml
bingocard/src/: main.rs
bmi/src/: bmi  input_height  input_height.rs  main.rs
communicator/: Cargo.toml
communicator/src/: lib.rs  network.rs
communicator/src/network/: mod.rs
counter/: Cargo.toml  tsukimei.rs
counter/src/: bmi_struct  bmi_struct.rs  cmptext.rs  cur_files.rs  fizzbuzz_file  fizzbuzz_file.rs  fizzbuzz_file2.rs  hashmap_err.rs  jisyo.rs  main.rs  mutarg  mutarg.rs  mytree  mytree.rs  owmer_simple.rs  owner_int  owner_int.rs  print_args.rs  println_pos  println_pos.rs  read_file  read_file.rs  rec_sum1to10  rec_sum1to10.rs  recursive  recursive.rs  slice_str  slice_str.rs  str_hex.rs  str_index.rs  str_index_fix2  str_index_fix2.rs  str_string  str_string.rs  str_substr.rs  str_tochars.rs  struct_car  struct_car.rs  struct_wh  struct_wh.rs  (+5 more)
crawl/: Cargo.toml  lib.rs
crawl/src/: crawler.rs  lib.rs  main.rs
diffmod/: Cargo.toml
diffmod/src/: main.rs
guess/: Cargo.toml
layer/: Cargo.toml
maze/src/: main.rs
src/: main.rs
todo-cli/: Cargo.toml
todo-cli/src/: cli.rs  main.rs  task.rs
variables/: Cargo.toml
variables/src/: main.rs
