[package]
name = "rustapp"
version = "0.1.0"
authors = ["`tatsuyakamikawara`"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# structopt = "0.3.13"
# indicatif = { version = "0.15.0", optional = true }

[dependencies]
rand = "0.3.14"
