[package]
name = "rustapp"
version = "0.1.0"
authors = ["`tatsuyakamikawara`"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
google-drive = "0.1.12"
yup-oauth2 = "4.1.4"
dotenv = "0.15.0"
tokio = { version = "0.2", features = ["full"] }

[features]
